HMAN-381 Streamline dependencies and add skeleton FTs files